--- a/Green-Space/Green-Space/Base.lproj/LaunchScreen.storyboard
+++ b/Green-Space/Green-Space/Base.lproj/LaunchScreen.storyboard
@@ -18,16 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainTest" translatesAutoresizingMaskIntoConstraints="NO" id="LpO-x0-miA">
-                                <rect key="frame" x="67.5" y="279.5" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple_logo_ grey" translatesAutoresizingMaskIntoConstraints="NO" id="LpO-x0-miA">
+                                <rect key="frame" x="112.5" y="251" width="150" height="185"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="ayQ-uZ-gYg"/>
-                                    <constraint firstAttribute="height" constant="128" id="eDG-SZ-6FL"/>
+                                    <constraint firstAttribute="width" secondItem="LpO-x0-miA" secondAttribute="height" multiplier="647:800" id="FlQ-pR-pM2"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="LpO-x0-miA" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.4" id="JFV-vg-so7"/>
                             <constraint firstItem="LpO-x0-miA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ObG-A3-dgs"/>
                             <constraint firstItem="LpO-x0-miA" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="vuT-Tz-z5v"/>
                         </constraints>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="mainTest" width="1341.449951171875" height="894.375"/>
+        <image name="apple_logo_ grey" width="647" height="800"/>
     </resources>
 </document>
