--- a/Green-Space/Green-Space/StartViewController/StartViewController.storyboard
+++ b/Green-Space/Green-Space/StartViewController/StartViewController.storyboard
@@ -18,17 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainTest" translatesAutoresizingMaskIntoConstraints="NO" id="WkC-4b-plQ">
-                                <rect key="frame" x="67.5" y="279.5" width="240" height="128"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple_logo_ grey" translatesAutoresizingMaskIntoConstraints="NO" id="WkC-4b-plQ">
+                                <rect key="frame" x="112.5" y="251" width="150" height="185"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="arl-xB-coS"/>
-                                    <constraint firstAttribute="width" constant="240" id="mTh-kp-lSU"/>
+                                    <constraint firstAttribute="width" secondItem="WkC-4b-plQ" secondAttribute="height" multiplier="647:800" id="P8L-la-hH8"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="WkC-4b-plQ" firstAttribute="centerY" secondItem="P5J-k0-i2r" secondAttribute="centerY" id="V7h-dp-Sed"/>
+                            <constraint firstItem="WkC-4b-plQ" firstAttribute="width" secondItem="VAo-dm-Zt1" secondAttribute="width" multiplier="0.4" id="bvv-Aq-BsD"/>
                             <constraint firstItem="WkC-4b-plQ" firstAttribute="centerX" secondItem="P5J-k0-i2r" secondAttribute="centerX" id="u9j-I0-Crl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="P5J-k0-i2r"/>
@@ -42,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="mainTest" width="1341.449951171875" height="894.375"/>
+        <image name="apple_logo_ grey" width="647" height="800"/>
     </resources>
 </document>
